--- a/config.yml
+++ b/config.yml
@@ -4,9 +4,9 @@ logging:
     com.redislabs.university: DEBUG
 defaultName: "RediSolar"
 redis:
-  host: localhost
-  port: 6379
-  password:
+  host: "redis-12392.c270.us-east-1-3.ec2.cloud.redislabs.com"
+  port: 12392
+  password: "redisru101"
 server:
   rootPath: /api
   applicationConnectors:
